changed slight ui and functionality

--- a/views/createchapter.ejs
+++ b/views/createchapter.ejs
@@ -8,11 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-
-    <form accept="/createchapter" method="post">
+    <form action="/createchapter" method="post">
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <input type="text" name="chapter" placeholder="enter your chapter name">
-    <input type="text" name="description" placeholder="ente your chapter description">
+    <input type="text" name="description" placeholder="enter your chapter description">
     <button type="button">submit</button>
     </form>
     <script>var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");</script>
