--- a/views/displaypages.ejs
+++ b/views/displaypages.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+<a href="/Educator-dashboard">back to dashboard</a> 
     <h1 class="text-3xl flex justify-center align-center mx-auto"><%= title %></h1>
 <a href="/chapters/createpages/<%= id %>" class="mt-20">
    <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
