--- a/views/createchapter.ejs
+++ b/views/createchapter.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+   <h1> add your chapter</h1>
     <form action="/createchapter" method="post">
     <input type="hidden" name="id" value="<%= id %>">
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
