--- a/views/createcourse.ejs
+++ b/views/createcourse.ejs
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <h1> add your course</h1>
     <form action="/createcourses"  method="post">
    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
    <input type="text" name="coursetitle" placeholder="enter your course title">
