--- a/views/createpages.ejs
+++ b/views/createpages.ejs
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
- <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <meta name="csrf-token" content="<%= csrfToken %>">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1> add your pages</h1>
+  <div class="container mx-auto py-8">
+    <h2>Add Your Page</h2>
+
     <form action="/createpages" method="post">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <input type="hidden" name="id" value="<%= id %>">
-    <input type="text" name="pgtitle" placeholder="enter your pg name">
-    <input type="text" name="pgcontent" placeholder="enter your pg content">
-    <button type="submit">submit</button>
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      <input type="hidden" name="id" value="<%= id %>">
+
+      <div class="mb-4">
+        <label for="pgtitle" class="block text-gray-700 text-sm font-bold mb-2">Page Title:</label>
+        <input type="text" id="pgtitle" name="pgtitle" placeholder="Enter Page Title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+      </div>
+
+      <div class="mb-4">
+        <label for="pgcontent" class="block text-gray-700 text-sm font-bold mb-2">Page Content:</label>
+        <textarea id="pgcontent" name="pgcontent" placeholder="Enter Page Content" rows="4" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>
+      </div>
+
+      <button type="submit" class="inline-flex items-center px-3 py-2 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded-md shadow-sm">
+        Create Page
+      </button>
     </form>
-    <script>var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");</script>
+  </div>
+
+  <script>var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");</script>
 </body>
 </html>
