--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <meta name="csrf-token" content="<%= csrfToken %>">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Learning Management System - Sign In</title>
 </head>
-<body>
-     <form action="/signin" method="post">
-     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-     <input type="email" name="email" placeholder="enter your email">
-     <input type="password" name="password" placeholder="enter your password">
-     <button type="submit"> login</button>
-     </form>
- <script>var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");</script>
+<body class="h-screen flex items-center justify-center bg-gray-100">
+  <main class="container mx-auto p-8 rounded-lg shadow-md bg-white">
+    <h1 class="text-3xl font-bold mb-4">Sign In</h1>
+    <form action="/signin" method="post" class="grid grid-cols-1 gap-4">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+
+      <label for="email" class="block font-medium mb-2">Email Address</label>
+      <input type="email" id="email" name="email" class="border rounded-md w-full px-4 py-2 shadow-sm focus:border-blue-500 focus:outline-none" placeholder="Enter your email address">
+
+      <label for="password" class="block font-medium mb-2">Password</label>
+      <input type="password" id="password" name="password" class="border rounded-md w-full px-4 py-2 shadow-sm focus:border-blue-500 focus:outline-none" placeholder="Enter your password">
+
+      <button type="submit" class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white font-bold rounded-md shadow-sm">
+        Sign In
+      </button>
+    </form>
+  </main>
 </body>
 </html>
