add student functionality and changed signup ui

--- a/views/Educatordashboard.ejs
+++ b/views/Educatordashboard.ejs
@@ -20,6 +20,7 @@
       <a href="/changePassword" class="inline-flex items-center px-4 py-2 mt-4 bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold rounded-md shadow-sm">
         Change Password
       </a>
+<a href="/viewreport/user/<%= userid%>"> view report</a>
     </section>
 
     <form action="/logout" method="post" class="text-center">
